[gd_scene load_steps=3 format=2]

[ext_resource path="res://Action RPG Resources/UI/DialogueInterface.gd" type="Script" id=1]
[ext_resource path="res://Action RPG Resources/UI/PlayerText.gd" type="Script" id=2]

[node name="DialogueInterface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerText" type="RichTextLabel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = -50.0
margin_bottom = -20.0
bbcode_enabled = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="PlayerText"]
margin_left = 258.0
margin_top = 12.0
margin_right = 298.0
margin_bottom = 26.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option1" type="Button" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -30.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option2" type="Button" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -65.0
margin_bottom = -45.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[connection signal="timeout" from="Timer" to="PlayerText" method="_on_Timer_timeout"]
